<resources>
    <string name="app_name">Payment Stone</string>

    <!-- Default Start -->
    <string name="ok">OK</string>
    <string name="yes">SIM</string>
    <string name="settings">Configurações</string>
    <string name="cancel">Cancelar</string>
    <string name="loading">Carregando...</string>
    <string name="send">Enviar</string>
    <!-- Default End -->

    <!--Home Start-->
    <string name="home_environment_selection">Selecione um ambiente</string>
    <string name="home_stone_code_selection">Digite seu Stone Code</string>
    <string name="home_activation_error">Erro na ativação do aplicativo, verifique a lista de erros do provider</string>
    <!--Home End-->

    <!--Dashboard Start-->
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_connect">Conectar</string>
    <string name="dashboard_disconnect">Desconectar</string>
    <string name="dashboard_devices">Devices</string>
    <string name="dashboard_select_devices">Selecione um device</string>
    <string name="dashboard_transaction">Fazer Transação</string>
    <string name="dashboard_message_pin_pad">Mensagem ao PinPad</string>
    <string name="dashboard_exit">Encerrar Sessão</string>
    <string name="dashboard_transaction_list">Lista de Transações</string>
    <string name="dashboard_transaction_error">Cancelar Transações c/ Erro</string>
    <string name="dashboard_pin_pad_not_connected">PinPad não conectado</string>
    <string name="dashboard_pin_pad_connected">PinPad conectado</string>
    <string name="dashboard_pin_pad_not_connected_title">Opa! Cadê o PinPad?!</string>
    <string name="dashboard_pin_pad_not_connected_description">Para continuarmos, precisamos que um PinPad esteja conectado.</string>
    <string name="dashboard_pin_pad_error">Erro durante a conexão. Verifique a lista de erros do provider para mais informações.</string>
    <!--Dashboard End-->

    <!--Message Start-->
    <string name="message_pin_pad_hint">Ex. Bem-vindo!</string>
    <!--Message End-->

    <!--Bluetooth Start-->
    <string name="bluetooth_disabled">Seu bluetooth está desabilitado. Por favor, habilite-o nas suas configurações.</string>
    <!--Bluetooth End-->

    <!--Logout Start-->
    <string name="logout_confirmation">Você tem certeza que deseja finalizar sua sessão?</string>
    <string name="logout_feedback">Encerrando sessão...</string>
    <string name="logout_error">Erro na ativacao do aplicativo, verifique a lista de erros do provider</string>
    <!--Logout End-->

    <!--Transaction Start-->
    <string name="transaction_zero">0</string>
    <string name="transaction_one">1</string>
    <string name="transaction_two">2</string>
    <string name="transaction_three">3</string>
    <string name="transaction_four">4</string>
    <string name="transaction_five">5</string>
    <string name="transaction_six">6</string>
    <string name="transaction_seven">7</string>
    <string name="transaction_eight">8</string>
    <string name="transaction_nine">9</string>
    <string name="transaction_one_installment">À Vista</string>
    <string name="transaction_interest_installment">%dx com juros</string>
    <string name="transaction_no_interest_installment">%dx sem juros</string>
    <string name="transaction_send">Enviar Transação</string>
    <string name="transaction_debit">Débito</string>
    <string name="transaction_credit">Crédito</string>
    <string name="transaction_success">Transação enviada com sucesso e salva no banco.</string>
    <string name="transaction_error">Erro na transação</string>
    <string name="transaction_error_detailed">Erro na transação: %s</string>
    <string name="transaction_method_payment">Selecione um método para pagamento</string>
    <string name="transaction_installment_number">Selecione o número de parcelas</string>
    <string name="transaction_with_capture">Transação com captura</string>
    <string name="transaction_cancel">Cancelar transação</string>
    <string name="transaction_client">Enviar via do cliente</string>
    <string name="transaction_establishment">Enviar via do estabelecimento</string>
    <string name="transaction_receipt_feedback">Enviando comprovante...</string>
    <string name="transaction_receipt_error">Erro ao enviar o comprovante</string>
    <string name="transaction_receipt_success">Comprovante enviado com sucesso</string>
    <string name="transaction_cancel_feedback">Cancelando transação...</string>
    <string name="transaction_cancel_error">Um erro ocorreu durante o cancelamento com a transacao de id: %d</string>
    <string name="transaction_capture">Capturar transação</string>
    <string name="transaction_capture_feedback">Efetuando captura...</string>
    <string name="transaction_capture_success">Transação capturada com sucesso =D</string>
    <string name="transaction_capture_error">Houve um erro ao capturar a transação =[</string>
    <!--Transaction End-->

    <!--Transaction List Start-->
    <string name="transaction_list_title">Lista de Transações</string>
    <string name="transaction_list_empty">A sua lista de transações está vazia =(</string>
    <!--Transaction List End-->

    <!--Transaction Error Start-->
    <string name="transaction_error_confirmation">Você tem certeza que deseja cancelar as transações com erro?</string>
    <string name="transaction_error_loading">Cancelando transações...</string>
    <string name="transaction_error_got_success">Transações canceladas com sucesso =]</string>
    <string name="transaction_error_got_fail">Ocorreu um erro ao cancelar as transações</string>
    <!--Transaction Error End-->
</resources>
